complete the docs of restclient (#118)